--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,107 @@
+*{
+  box-sizing: border-box;
+}
+
 body{
-  background-color: azure;
+  background-color: #F5F6F7;
+  box-sizing: border-box;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
+  color: #212121;
+  background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
+}
+
+#header{
+  text-align: center;
+  color: rgb(250, 250, 250);
+}
+
+#body-wrapper{
+  width: 80%;
+  margin: 2.5rem auto 0 auto;
+}
+
+#currency-card{
+  width: 80%;
+  margin: 0 auto;
+  background-color: whitesmoke;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 2%;
+  border-radius: 0.5rem;
+
+  &:hover{
+    box-shadow: 0 4px 8px 0 rgba(58,71,213, 0.5)
+  }
+}
+
+#titlebar {
+  display: flex;
+  padding: 0 0.5rem;
+  color: rgba(20, 20, 20, 0.8);
+
+  > * {
+    padding-left: 0.5rem;
+    font-weight: normal;
+    width: 50%;
+    margin: 0.5rem;
+  }
+}
+
+#select {
+  display: flex;
+  padding: 0.5rem 0.5rem 0 0.5rem;
+
+  > * {
+    width: 50%;
+    margin: 0.5rem 0.5rem 0 0.5rem;
+    padding: 1rem 1rem 1rem 1rem;
+    background-color: white;
+    border: 1px solid rgba(0,0,0,0.1);
+    font-size: 0.9rem;
+    outline-color: rgba(0,0,0,0.1);
+  }
+
+  #fromSelect{
+    margin-right: 0;
+    border-right: none;
+  }
+  #toSelect{
+    margin-left: 0;
+  }
+}
+
+#out{
+  display: flex;
+  padding: 0.5rem;
+  padding-top: 0;
+
+  > * {
+    width: 50%;
+    margin: 0 0.5rem 0.5rem 0.5rem;
+    padding: 0 1rem 1rem 1rem;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-top: none;
+    text-align: center;
+    color: rgba(20, 20, 20, 0.8);
+    font-size: 2rem;
+    outline-color: rgba(0,0,0,0.1);
+  }
+
+  #fromInput{
+    margin-right: 0;
+    border-right: none;
+  }
+  #toInput{
+    margin-left: 0;
+    color: rgba(20, 20, 20, 0.6);
+  }
+}
+
+#footer{
+  color: rgba(255, 255, 255, 0.7);
+  text-align: center;
+  bottom: 0;
+  padding: 1rem;
+  z-index: 0;
+  width: 100%;
 }
