--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 }
 
 body{
-  background-color: #F5F6F7;
+  background-color: #3a47d5;
   box-sizing: border-box;
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   color: #212121;
@@ -13,6 +13,15 @@ body{
 #header{
   text-align: center;
   color: rgb(250, 250, 250);
+
+  > #title{
+    letter-spacing: 0.25rem;
+    margin-bottom: 0;
+  }
+
+  > #tag{
+    margin-top: 0;
+  }
 }
 
 #body-wrapper{
@@ -23,14 +32,14 @@ body{
 #currency-card{
   width: 80%;
   margin: 0 auto;
-  background-color: whitesmoke;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  background-color: white;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
   transition: 0.3s;
   padding: 2%;
   border-radius: 0.5rem;
 
   &:hover{
-    box-shadow: 0 4px 8px 0 rgba(58,71,213, 0.5)
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
   }
 }
 
@@ -55,10 +64,16 @@ body{
     width: 50%;
     margin: 0.5rem 0.5rem 0 0.5rem;
     padding: 1rem 1rem 1rem 1rem;
-    background-color: white;
+    background-color: whiteSmoke;
     border: 1px solid rgba(0,0,0,0.1);
     font-size: 0.9rem;
-    outline-color: rgba(0,0,0,0.1);
+    outline: none;
+  }
+
+  > select::after{
+    content: '\f078';
+    color: black;
+    pointer-events: none;
   }
 
   #fromSelect{
